# simple-django-app--employees

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
app/app/: settings.py  urls.py
app/employees/: admin.py  models.py  urls.py  views.py
app/employees/migrations/: 0001_initial.py
app/employees/templates/: employees_base.html  employees_tree_view.html
dev/: generate_initial_data.py
employees/: views.py
