[tool.poetry]
name = "employees"
version = "0.1.0"
description = ""
authors = ["Anton Bagrianov t.me/rudiemeant"]
readme = "README.md"
packages = [{include = "employees"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.991"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
